--- a/Resources/Styles/ButtonsStyles.xaml
+++ b/Resources/Styles/ButtonsStyles.xaml
@@ -16,11 +16,13 @@
                     <Border Background="{TemplateBinding Background}" 
                             BorderBrush="{TemplateBinding BorderBrush}" 
                             Padding="8,0,14,0"
-                            CornerRadius="14">
+                            CornerRadius="12">
                         <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                             <Image Source="{Binding Path=Tag, RelativeSource={RelativeSource TemplatedParent}}" 
-                                    Width="20" Height="20" Margin="0,0,6,0"/>
-                            <TextBlock Text="{TemplateBinding Content}" Foreground="{StaticResource BackgroundBrush}" VerticalAlignment="Center"/>
+                                    Width="20" Height="20" Margin="0,0,4,0"/>
+                            <TextBlock Text="{TemplateBinding Content}" 
+                                       Foreground="{StaticResource BackgroundBrush}" 
+                                       VerticalAlignment="Center"/>
                         </StackPanel>
                     </Border>
                 </ControlTemplate>
@@ -64,6 +66,52 @@
                 <Setter Property="Background" Value="{StaticResource SecondaryButtonHoverBrush}"/>
             </Trigger>
         </Style.Triggers>
+    </Style>
+
+    <Style x:Key="CheckBoxStyle" TargetType="CheckBox">
+        <Setter Property="FontFamily" Value="SF Pro Display"/>
+        <Setter Property="Foreground" Value="{StaticResource SecondaryBrush}"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="CheckBox">
+                    <StackPanel Orientation="Horizontal">
+                        <Border x:Name="CheckBorder"
+                            Width="16"
+                            Height="16"
+                            CornerRadius="4"
+                            BorderThickness="1"
+                            BorderBrush="#D3D1DB"
+                            Background="{StaticResource SecondaryButtonBrush}"
+                            Margin="5">
+                            <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="3.5">
+                                <Path x:Name="CheckMark"
+                                    Data="M 2,6 L 5,10 L 10,3"
+                                    Stroke="Transparent"
+                                    StrokeThickness="1.5"
+                                    StrokeLineJoin="Round"
+                                    StrokeStartLineCap="Round"
+                                    StrokeEndLineCap="Round"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"
+                                    Stretch="Uniform"/>
+                            </Grid>
+                        </Border>
+                        <ContentPresenter VerticalAlignment="Center" Margin="5,0,0,0"/>
+                    </StackPanel>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsChecked" Value="True">
+                            <Setter TargetName="CheckBorder" Property="Background" Value="{StaticResource PrimaryButtonBrush}"/>
+                            <Setter TargetName="CheckBorder" Property="BorderThickness" Value="0"/>
+                            <Setter TargetName="CheckMark" Property="Stroke" Value="White"/>
+                        </Trigger>
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter TargetName="CheckBorder" Property="Opacity" Value="0.5"/>
+                            <Setter Property="Foreground" Value="Gray"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
     </Style>
 
     <Style x:Key="ProfileButtonStyle" TargetType="Button">
