--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ItaliaPizzaClient.Views"
         mc:Ignorable="d"
+        WindowStartupLocation="CenterScreen"
         Title="MainWindow" Height="720" Width="1080">
     <Border Background="{StaticResource BackgroundBrush}" CornerRadius="12">
         <Grid>
