--- a/Views/RegisterSupplyPage.xaml
+++ b/Views/RegisterSupplyPage.xaml
@@ -36,14 +36,14 @@
 
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="3*"/>
-                <ColumnDefinition Width="7*"/>
+                <ColumnDefinition Width="3.2*"/>
+                <ColumnDefinition Width="6.8*"/>
             </Grid.ColumnDefinitions>
 
             <Border Grid.Column="0" BorderBrush="{DynamicResource SecondaryBrush}" BorderThickness="0,0,0.5,0">
                 <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Top"
-                            Margin="0,24" Width="200">
-                    <Border BorderBrush="#D3D1DB" BorderThickness="1" CornerRadius="8" Width="200" Height="200">
+                            Margin="0,24" Width="210">
+                    <Border BorderBrush="#D3D1DB" BorderThickness="1" CornerRadius="8" Width="210" Height="210">
                         <Image Name="UserImage" HorizontalAlignment="Center" VerticalAlignment="Center" Stretch="UniformToFill"/>
                     </Border>
 
@@ -82,30 +82,97 @@
                                Style="{DynamicResource SubtitleLabelStyle}"/>
                 </StackPanel>
 
-                <Border Grid.Row="1" BorderBrush="{DynamicResource SecondaryBrush}" BorderThickness="0,0,0,0.5">
-                    <StackPanel Orientation="Vertical" Margin="20,0,16,0"
-                                HorizontalAlignment="Left">
-                        <TextBox Style="{StaticResource TextBoxStyle}" 
-                                 Tag="{DynamicResource RegSupply_TbSupplyName}"
-                                 Width="280"/>
-                        <CheckBox Content="El insumo no contiene marca."
-                                  Style="{DynamicResource CheckBoxStyle}"/>
-                        <ComboBox Style="{DynamicResource ComboBoxStyle}" 
-                                  Tag="{DynamicResource Glb_Personal}">
-                            <ComboBoxItem Content="Opción 1"/>
-                            <ComboBoxItem Content="Opción 2"/>
-                            <ComboBoxItem Content="Opción 3"/>
-                            <ComboBoxItem Content="Opción 4"/>
-                        </ComboBox>
-                    </StackPanel>
+                <Border Grid.Row="1" BorderBrush="{DynamicResource SecondaryBrush}">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" MinWidth="20"/>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="Auto" MinWidth="20"/>
+                        </Grid.ColumnDefinitions>
+
+                        <Border Grid.Column="1" BorderBrush="{DynamicResource SecondaryBrush}">
+                            <Grid>
+                                <StackPanel Orientation="Vertical" VerticalAlignment="Top" HorizontalAlignment="Stretch">
+
+                                    <!-- Fila 1: Nombre y Marca del Insumo -->
+                                    <Grid Margin="0,0,0,12" HorizontalAlignment="Stretch">
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="*" />
+                                            <ColumnDefinition Width="24" />
+                                            <ColumnDefinition Width="*" />
+                                        </Grid.ColumnDefinitions>
+
+                                        <TextBox Grid.Column="0" 
+             Tag="{DynamicResource RegSupply_TbSupplyName}" 
+             Style="{DynamicResource TextBoxStyle}" VerticalAlignment="Top"
+             HorizontalAlignment="Stretch"/>
+
+                                        <StackPanel Grid.Column="2" Orientation="Vertical" 
+                                HorizontalAlignment="Stretch">
+                                            <TextBox Tag="{DynamicResource RegSupply_TbSupplyBrand}" 
+                 Style="{DynamicResource TextBoxStyle}"
+                 HorizontalAlignment="Stretch"/>
+                                            <CheckBox Content="{DynamicResource RegSupply_CheckBSupplyBrand}" 
+                  Style="{DynamicResource CheckBoxStyle}"/>
+                                        </StackPanel>
+                                    </Grid>
+
+                                    <!-- Fila 2: Categoría y Unidad de Medida -->
+                                    <Grid Margin="0,0,0,12" HorizontalAlignment="Stretch">
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="*" />
+                                            <ColumnDefinition Width="24" />
+                                            <ColumnDefinition Width="*" />
+                                        </Grid.ColumnDefinitions>
+
+                                        <ComboBox Grid.Column="0" x:Name="CbCategories" 
+              Tag="{DynamicResource RegSupply_CbCategory}"
+              Style="{DynamicResource ComboBoxStyle}" 
+              HorizontalAlignment="Stretch"/>
+
+                                        <ComboBox Grid.Column="2" x:Name="CbUnitMeasures" 
+              Tag="{DynamicResource RegSupply_CbSupplyMeasure}"
+              Style="{DynamicResource ComboBoxStyle}"
+              DisplayMemberPath="Name" SelectedValuePath="Id"
+              HorizontalAlignment="Stretch"/>
+                                    </Grid>
+
+                                    <!-- Fila 3: Proveedor y Botón -->
+                                    <Grid HorizontalAlignment="Stretch" Margin="24,0">
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="*" />
+                                            <ColumnDefinition Width="Auto" />
+                                        </Grid.ColumnDefinitions>
+
+                                        <ComboBox Grid.Column="0" Tag="{DynamicResource RegSupply_CbSupplier}"
+              Style="{DynamicResource ComboBoxStyle}" 
+              HorizontalAlignment="Stretch"/>
+
+                                        <Button Grid.Column="1" Content="{DynamicResource RegSupply_BtnRegisterSupplier}"
+            Style="{DynamicResource PrimaryButtonStyle}" 
+            Padding="8,4"/>
+                                    </Grid>
+
+                                </StackPanel>
+                            </Grid>
+                        </Border>
+                    </Grid>
                 </Border>
 
-                <StackPanel Grid.Row="2" HorizontalAlignment="Right" Margin="20,0" VerticalAlignment="Center">
-                    <Button x:Name="BtnNewSupply" Style="{DynamicResource PrimaryButtonStyle}"
-                            Content="{DynamicResource RegSupply_BtnRegisterSupply}">
-                        <Button.Tag>/Resources/Icons/add-icon.png</Button.Tag>
-                    </Button>
-                </StackPanel>
+                <Border Grid.Row="2" BorderBrush="{DynamicResource SecondaryBrush}"
+                        BorderThickness="0,0.5,0,0">
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="20,0" VerticalAlignment="Center">
+                        <Button x:Name="BtnNewSupply" Style="{DynamicResource SecondaryButtonStyle}"
+                                Content="{DynamicResource RegSupply_BtnRegisterSupply}">
+                            <Button.Tag>/Resources/Icons/add-icon.png</Button.Tag>
+                        </Button>
+                        
+                        <Button x:Name="BtnCancel" Style="{DynamicResource PrimaryButtonStyle}"
+                                Content="{DynamicResource RegSupply_BtnRegisterSupply}">
+                            <Button.Tag>/Resources/Icons/add-icon.png</Button.Tag>
+                        </Button>
+                    </StackPanel>
+                </Border>
 
             </Grid>
             
