--- a/Resources/Styles/UIElementals.xaml
+++ b/Resources/Styles/UIElementals.xaml
@@ -1,5 +1,12 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <!-- Tipografías utilizadas -->
+    <FontFamily x:Key="SFProRegular">pack://application:,,,/Resources/Fonts/#SF Pro Display</FontFamily>
+    <FontFamily x:Key="SFProMedium">pack://application:,,,/Resources/Fonts/#SF Pro Display Bold</FontFamily>
+    <FontFamily x:Key="SFProSemiBold">pack://application:,,,/Resources/Fonts/#SF Pro Display Bold</FontFamily>
+    <FontFamily x:Key="SFProBold">pack://application:,,,/Resources/Fonts/#SF Pro Display Bold</FontFamily>
+    <FontFamily x:Key="SFProItalic">pack://application:,,,/Resources/Fonts/#SF Pro Display Italic</FontFamily>
+
     <!-- Definición de colores -->
     <Color x:Key="BackgroundColor">#F4F4FA</Color>
     <Color x:Key="PrimaryColor">#2D2C32</Color>
