--- a/Views/RegisterSupplyPage.xaml
+++ b/Views/RegisterSupplyPage.xaml
@@ -36,16 +36,24 @@
 
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="3.2*"/>
-                <ColumnDefinition Width="6.8*"/>
+                <ColumnDefinition Width="240"/>
+                <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
             <Border Grid.Column="0" BorderBrush="{DynamicResource SecondaryBrush}" BorderThickness="0,0,0.5,0">
                 <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Top"
-                            Margin="0,24" Width="210">
-                    <Border BorderBrush="#D3D1DB" BorderThickness="1" CornerRadius="8" Width="210" Height="210">
-                        <Image Name="UserImage" HorizontalAlignment="Center" VerticalAlignment="Center" Stretch="UniformToFill"/>
-                    </Border>
+                            Margin="0,24" Width="200">
+
+                    <Image Name="SupplyImage"
+                               Source="/Resources/Images/default-supply-pic.png"
+                               HorizontalAlignment="Center" 
+                               VerticalAlignment="Center" 
+                               Stretch="UniformToFill" 
+                               RenderOptions.BitmapScalingMode="HighQuality">
+                        <Image.Clip>
+                            <RectangleGeometry Rect="0,0,200,200" RadiusX="12" RadiusY="12"/>
+                        </Image.Clip>
+                    </Image>
 
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,8">
                         <Image Width="12" Height="12" Margin="0,0,4,0"
@@ -57,14 +65,15 @@
                                    Text="{DynamicResource Glb_ValidImageFormat}"/>
                     </StackPanel>
                     
-                    <Button Content="{DynamicResource Glb_BtnSelectImage}"
+                    <Button x:Name="BtnSelectImage"
+                            Content="{DynamicResource Glb_BtnSelectImage}"
                             Style="{DynamicResource PrimaryButtonStyle}"
-                            Margin="0,12,0,6">
+                            Margin="0,12,0,6" Click="Click_BtnSelectImage">
                         <Button.Tag>/Resources/Icons/gallery-icon.png</Button.Tag>
                     </Button>
 
                     <Button Content="{DynamicResource Glb_BtnDeleteImage}"
-                            Style="{DynamicResource SecondaryButtonStyle}" Foreground="#FF1654">
+                            Style="{DynamicResource DangerButtonStyle}">
                         <Button.Tag>/Resources/Icons/delete-icon.png</Button.Tag>
                     </Button>
                 </StackPanel>
@@ -82,88 +91,101 @@
                                Style="{DynamicResource SubtitleLabelStyle}"/>
                 </StackPanel>
 
-                <Border Grid.Row="1" BorderBrush="{DynamicResource SecondaryBrush}">
+                <Border Grid.Row="1">
                     <Grid>
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto" MinWidth="20"/>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="Auto" MinWidth="20"/>
+                            <ColumnDefinition Width="12*" MaxWidth="720"/>
+                            <ColumnDefinition Width="*" MinWidth="0"/>
                         </Grid.ColumnDefinitions>
 
-                        <Border Grid.Column="1" BorderBrush="{DynamicResource SecondaryBrush}">
+                        <Grid Grid.Column="0" HorizontalAlignment="Stretch" Margin="20,0,0,0">
                             <Grid>
-                                <StackPanel Orientation="Vertical" VerticalAlignment="Top" HorizontalAlignment="Stretch">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="*" />
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                </Grid.RowDefinitions>
 
-                                    <!-- Fila 1: Nombre y Marca del Insumo -->
-                                    <Grid Margin="0,0,0,12" HorizontalAlignment="Stretch">
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="*" />
-                                            <ColumnDefinition Width="24" />
-                                            <ColumnDefinition Width="*" />
-                                        </Grid.ColumnDefinitions>
+                                <TextBox Grid.Row="0" Grid.Column="0"
+                                         Tag="{DynamicResource RegSupply_TbSupplyName}" 
+                                         Style="{DynamicResource TextBoxStyle}"
+                                         HorizontalAlignment="Stretch" VerticalAlignment="Top"
+                                         Margin="0,0,10,8"/>
+                                <StackPanel Grid.Row="0" Grid.Column="1"
+                                            Orientation="Vertical" VerticalAlignment="Top"
+                                            Margin="10,0,0,8">
+                                    <TextBox x:Name="TbSupplyBrand"
+                                             Tag="{DynamicResource RegSupply_TbSupplyBrand}" 
+                                             Style="{DynamicResource TextBoxStyle}"/>
+                                    <CheckBox Content="{DynamicResource RegSupply_CheckBSupplyBrand}"
+                                              Style="{DynamicResource CheckBoxStyle}" Margin="5,4,0,0"
+                                              Checked="CheckbBrand_Checked" Unchecked="CheckbBrand_Unchecked"/>
+                                </StackPanel>
 
-                                        <TextBox Grid.Column="0" 
-             Tag="{DynamicResource RegSupply_TbSupplyName}" 
-             Style="{DynamicResource TextBoxStyle}" VerticalAlignment="Top"
-             HorizontalAlignment="Stretch"/>
+                                <ComboBox x:Name="CbCategories"
+                                          Grid.Row="1" Grid.Column="0"
+                                          Tag="{DynamicResource RegSupply_CbCategory}"
+                                          Style="{DynamicResource ComboBoxStyle}"
+                                          Margin="0,8,10,8"
+                                          DisplayMemberPath="Name"
+                                          SelectedValuePath="Name"/>
+                                <ComboBox Grid.Row="1" Grid.Column="1"
+                                          Tag="{DynamicResource RegSupply_CbSupplyMeasure}"
+                                          Style="{DynamicResource ComboBoxStyle}"
+                                          Margin="10,8,0,8"/>
+                                <Grid Grid.Row="2" Grid.ColumnSpan="2" Margin="0,12,0,16">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="2.5*" />
+                                        <ColumnDefinition Width="7.5*" />
+                                    </Grid.ColumnDefinitions>
 
-                                        <StackPanel Grid.Column="2" Orientation="Vertical" 
-                                HorizontalAlignment="Stretch">
-                                            <TextBox Tag="{DynamicResource RegSupply_TbSupplyBrand}" 
-                 Style="{DynamicResource TextBoxStyle}"
-                 HorizontalAlignment="Stretch"/>
-                                            <CheckBox Content="{DynamicResource RegSupply_CheckBSupplyBrand}" 
-                  Style="{DynamicResource CheckBoxStyle}"/>
-                                        </StackPanel>
-                                    </Grid>
+                                    <TextBox Grid.Column="0"
+                                             Tag="{DynamicResource RegSupply_TbUnitPrice}"
+                                             Style="{DynamicResource TextBoxStyle}"
+                                             Margin="0,0,10,0"
+                                             PreviewTextInput="PreviewTextInput_TbUnitPrice"
+                                             LostFocus="LostFocus_TbUnitPrice"/>
 
-                                    <!-- Fila 2: Categoría y Unidad de Medida -->
-                                    <Grid Margin="0,0,0,12" HorizontalAlignment="Stretch">
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="*" />
-                                            <ColumnDefinition Width="24" />
-                                            <ColumnDefinition Width="*" />
-                                        </Grid.ColumnDefinitions>
-
-                                        <ComboBox Grid.Column="0" x:Name="CbCategories" 
-              Tag="{DynamicResource RegSupply_CbCategory}"
-              Style="{DynamicResource ComboBoxStyle}" 
-              HorizontalAlignment="Stretch"/>
-
-                                        <ComboBox Grid.Column="2" x:Name="CbUnitMeasures" 
-              Tag="{DynamicResource RegSupply_CbSupplyMeasure}"
-              Style="{DynamicResource ComboBoxStyle}"
-              DisplayMemberPath="Name" SelectedValuePath="Id"
-              HorizontalAlignment="Stretch"/>
-                                    </Grid>
-
-                                    <!-- Fila 3: Proveedor y Botón -->
-                                    <Grid HorizontalAlignment="Stretch" Margin="24,0">
+                                    <Grid Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="*" />
                                             <ColumnDefinition Width="Auto" />
                                         </Grid.ColumnDefinitions>
 
                                         <ComboBox Grid.Column="0" Tag="{DynamicResource RegSupply_CbSupplier}"
-              Style="{DynamicResource ComboBoxStyle}" 
-              HorizontalAlignment="Stretch"/>
-
-                                        <Button Grid.Column="1" Content="{DynamicResource RegSupply_BtnRegisterSupplier}"
-            Style="{DynamicResource PrimaryButtonStyle}" 
-            Padding="8,4"/>
+                                                  Style="{DynamicResource ComboBoxStyle}"
+                                                  HorizontalAlignment="Stretch"
+                                                  Margin="10,10,5,10"/>
+                                        <Button Grid.Column="1" Style="{DynamicResource PrimaryButtonStyle}"
+                                                Content="{DynamicResource RegSupply_BtnRegisterSupplier}"
+                                                HorizontalAlignment="Stretch"
+                                                Margin="5,0,0,0"
+                                                Click="Click_BtnRegisterSupplier">
+                                            <Button.Tag>/Resources/Icons/redirect-icon.png</Button.Tag>
+                                        </Button>
                                     </Grid>
+                                </Grid>
 
-                                </StackPanel>
+                                <TextBox Grid.ColumnSpan="2" Grid.Row="3"
+                                         Style="{DynamicResource TextAreaStyle}"
+                                         Tag="Descripción:"/>
                             </Grid>
-                        </Border>
+                        </Grid>
+
                     </Grid>
                 </Border>
 
                 <Border Grid.Row="2" BorderBrush="{DynamicResource SecondaryBrush}"
                         BorderThickness="0,0.5,0,0">
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="20,0" VerticalAlignment="Center">
-                        <Button x:Name="BtnNewSupply" Style="{DynamicResource SecondaryButtonStyle}"
-                                Content="{DynamicResource RegSupply_BtnRegisterSupply}">
+                        <Button x:Name="BtnNewSupply" Style="{DynamicResource SecondaryButtonNoIconStyle}"
+                                Content="{DynamicResource Glb_Cancel}"
+                                Margin="0,0,10,0">
                             <Button.Tag>/Resources/Icons/add-icon.png</Button.Tag>
                         </Button>
                         
