--- a/Views/RegisterProduct.xaml
+++ b/Views/RegisterProduct.xaml
@@ -40,7 +40,16 @@
                 <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Top"
              Margin="0,24" Width="200">
                     <Border BorderBrush="#D3D1DB" BorderThickness="1" CornerRadius="8" Width="200" Height="200">
-                        <Image Name="ProductImage" HorizontalAlignment="Center" VerticalAlignment="Center" Stretch="UniformToFill"/>
+                        <Image Name="SupplyImage"
+                               Source="/Resources/Images/default-supply-pic.png"
+                               HorizontalAlignment="Center" 
+                               VerticalAlignment="Center" 
+                               Stretch="UniformToFill" 
+                               RenderOptions.BitmapScalingMode="HighQuality">
+                            <Image.Clip>
+                                <RectangleGeometry Rect="0,0,200,200" RadiusX="12" RadiusY="12"/>
+                            </Image.Clip>
+                        </Image>
                     </Border>
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,8">
                         <Image Width="12" Height="12" Margin="0,0,4,0"
@@ -51,9 +60,9 @@
                                    TextWrapping="Wrap"
                                    Text="{DynamicResource Glb_ValidImageFormat}"/>
                     </StackPanel>
-                    <Button Content="{DynamicResource Glb_BtnSelectImage}"
+                    <Button  Content="{DynamicResource Glb_BtnSelectImage}"
                             Style="{DynamicResource PrimaryButtonStyle}"
-                            Margin="0,12,0,6">
+                            Margin="0,12,0,6" Click="Click_BtnSelectImage">
                         <Button.Tag>/Resources/Icons/gallery-icon.png</Button.Tag>
                     </Button>
                     
@@ -82,9 +91,9 @@
                                 <ColumnDefinition Width="3*"/>
                                 <ColumnDefinition Width="3*"/>
                             </Grid.ColumnDefinitions>
-                            <TextBox Grid.Column="0" Width="Auto" Margin="7" Style="{StaticResource TextBoxStyle}" 
-                                 Tag="{DynamicResource RegProduct_TbProductName}"/>
-                            <ComboBox Grid.Column="1"  Width="Auto" Margin="7" Style="{DynamicResource ComboBoxStyle}" 
+                            <TextBox Name="txt_name" Grid.Column="0" Width="Auto" Margin="7" Style="{StaticResource TextBoxStyle}" 
+                                 Tag="{DynamicResource RegProduct_TbProductName}" />
+                            <ComboBox x:Name="CbCategories" Grid.Column="1"  Width="Auto" Margin="7" Style="{DynamicResource ComboBoxStyle}" 
                                   Tag="{DynamicResource Glb_CbxCategories}">
                                 <ComboBoxItem Content="Opción 1"/>
                                 <ComboBoxItem Content="Opción 2"/>
@@ -97,7 +106,7 @@
                                 <ColumnDefinition Width="3*"/>
                                 <ColumnDefinition Width="3*"/>
                             </Grid.ColumnDefinitions>
-                            <TextBox Grid.Column="0" Style="{StaticResource TextBoxStyle}" 
+                            <TextBox x:Name="txt_price" Grid.Column="0" Style="{StaticResource TextBoxStyle}" 
                                  Tag="{DynamicResource RegProduct_Price}"
                                  Margin="7"/>
                             <TextBox Grid.Column="1" Style="{StaticResource TextBoxStyle}" 
@@ -111,7 +120,7 @@
                                 <ColumnDefinition Width="3*"/>
                                 <ColumnDefinition Width="3*"/>
                             </Grid.ColumnDefinitions>
-                            <TextBox Grid.Column="0"  Margin="7"  Style="{StaticResource TextBoxStyle}" 
+                            <TextBox x:Name="txt_description" Grid.Column="0"  Margin="7"  Style="{StaticResource TextBoxStyle}" 
                                  Tag="{DynamicResource RegProduct_Description}"
                                  />
 
@@ -121,6 +130,18 @@
                         </Grid>
                     </Grid>
                 </Border>
+                <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="20,0" VerticalAlignment="Center">
+                    <Button x:Name="BtnCancel" Style="{DynamicResource SecondaryButtonNoIconStyle}"
+                                Content="{DynamicResource Glb_Cancel}"
+                                Margin="0,0,10,0">
+                        <Button.Tag>/Resources/Icons/add-icon.png</Button.Tag>
+                    </Button>
+
+                    <Button x:Name="BtnNewProduct" Style="{DynamicResource PrimaryButtonStyle}"
+                                Content="{DynamicResource RegProduct_BtnRegisterProdcut}" Click="BtnNewProduct_Click">
+                        <Button.Tag>/Resources/Icons/add-icon.png</Button.Tag>
+                    </Button>
+                </StackPanel>
             </Grid>
         </Grid>
     </Grid>
